Upload CSS progress and fix issue with pfp squishing

--- a/src/style.css
+++ b/src/style.css
@@ -31,9 +31,24 @@
   }
 }
 
+html,
 body {
+  margin: 0;
+  padding: 0;
   background-color: var(--background);
   color: var(--text);
+}
+
+.backdrop {
+  background-color: var(--text);
+  padding-top: 30px;
+}
+
+.content-background {
+  background-color: var(--background);
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
 h1 {
@@ -42,10 +57,10 @@ h1 {
 }
 
 #app {
-  max-width: 1180px;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
+  background-color: var(--background);
 }
 
 .logo {
@@ -105,6 +120,7 @@ button {
 
 .mainInfo {
   margin-bottom: 100px;
+  min-height: 700px;
 }
 .bio-container {
   display: flex;
